# git2ipfs

./: Cargo.toml
src/: error.rs  files.rs  git.rs  ipfs.rs  main.rs
