[package]
name = "ipfs-git"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
anyhow = "1.0"
# ipfs-api = { version = "0.14", features = ["with-hyper-rustls", "with-builder"], default-features = false }
ipfs-api = { path = "../rust-ipfs-api/ipfs-api" }
tokio =  { version = "1", features = ["full"] }
hyper = "0.14"
futures = "0.3"
itertools = "0.10"
snafu = "0.6"
indicatif = "0.16"
cid = "0.7"
rand = "0.8"
async-stream = "0.3"