[package]
name = "git2ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.7"
clap = "2.34"
exitcode = "1.1.2"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
futures = "0.3"
git2 = "0.13"
hyper = "0.14"
indicatif = "0.16"
ipfs-api = { path = "../rust-ipfs-api/ipfs-api" }
# ipfs-api = { version = "0.14", features = ["with-hyper-rustls", "with-builder"], default-features = false }
itertools = "0.10"
snafu = "0.6"
rand = "0.8"
tempfile = "3.2.0"
tokio = { version = "1", features = ["full"] }
tryhard = "0.4"
url = "2.2"
